import org.apache.commons.io.FileUtils

import java.text.SimpleDateFormat

plugins {
    id 'java'
    id 'org.jetbrains.intellij'
    id 'org.jetbrains.kotlin.jvm'
}

test {
    minHeapSize = "512m" // initial heap size
    maxHeapSize = "4096m" // maximum heap size
    jvmArgs '-XX:MaxPermSize=152m' // mem argument for the test JVM
}

group 'com.sickworm.intellij'

version pluginVersion

// record compile time
def compileTime = System.currentTimeMillis()
def compileDate = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date())
new File("$rootDir/idea/src/main/resources/META-INF").mkdirs()
new File("$rootDir/idea/src/main/resources/META-INF/JUGG_PLUGIN_INFO.MF")
        .write("""Version: $version
Compile-Date: $compileDate
Compile-Timestamp: $compileTime
""")

tasks.findByName("buildPlugin").doFirst {
    // clean older distribution
    new File("$rootDir/idea/build/distributions").deleteDir()
    new File("$rootDir/idea/build/distributions").mkdirs()
}

tasks.register('buildPluginInternal') {
    group = 'intellij'
    description = 'Builds the plugin with the local internal servers.json resource.'
    dependsOn 'buildPlugin', ':main:prepareInternalServers'
}

tasks.named('buildPlugin').configure {
    mustRunAfter ':main:prepareInternalServers'
}

sourceCompatibility = 11
targetCompatibility = 11

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}

intellij {
    pluginName = 'jugg'
    updateSinceUntilBuild = false
    version = ide_version
    plugins = ['android']
}

sourceSets {
    main {
        java {
            srcDirs += 'src/ide_entry/java'
        }
        resources {
            srcDirs += 'src/ide_entry/resources'
        }
    }
}

patchPluginXml.changeNotes = new File("${rootProject.rootDir}/change_log/change_log.html").getText('UTF-8')
FileUtils.copyDirectory(file("${rootProject.rootDir}/change_log") , file("src/main/resources/change_log"))
new File("src/main/resources/docs/skills").mkdirs()
def skillsBundleZipFile = file("src/main/resources/docs/skills/docs-skills.zip")
skillsBundleZipFile.delete()
ant.zip(destfile: skillsBundleZipFile) {
    zipfileset(
            dir: "${rootProject.rootDir}/docs/skills",
            excludes: "ADK_RULES.md,README.md,benchmark/**"
    )
}

runIde {
    // default 11_0_11b1341.57 and will get Access Denied
//    jbrVersion = '11_0_4b520.11'
//    ideDirectory '/Applications/Android Studio.app/Contents'
    jbrVersion = '17.0.9b1087.7'
    jvmArgs = ['-Xmx8G']
}

buildSearchableOptions {
    // default 11_0_11b1341.57 and will get Access Denied
//    jbrVersion = '11_0_4b520.11'
    jbrVersion = '17.0.9b1087.7'
    enabled = false
}

repositories {
    google()
    mavenCentral()

    flatDir {
        dirs '../main/libs'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    // for Kotlin
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"

    implementation(project(':main')) {
        // com.intellij.diagnostic.PluginException: Cannot load class com.google.common.util.concurrent.ListenableFuture (
        //  error: loader constraint violation: loader com.intellij.ide.plugins.cl.PluginClassLoader @286323ab wants to load interface com.google.common.util.concurrent.ListenableFuture. A different interface with the same name was previously loaded by com.intellij.util.lang.PathClassLoader @3941a79c. (com.google.common.util.concurrent.ListenableFuture is in unnamed module of loader com.intellij.util.lang.PathClassLoader @3941a79c),
        //  classLoader=PluginClassLoader(plugin=PluginDescriptor(name=Jugg, id=com.sickworm.intellij.jugg, descriptorPath=plugin.xml, path=~/Library/Application Support/Google/AndroidStudio2024.3/plugins/jugg, version=2.2.0-rc27-feature_databinding-SNAPSHOT, package=null, isBundled=false), packagePrefix=null, state=active, parents=PluginDescriptor(name=IDEA CORE, id=com.intellij, moduleName=intellij.platform.vcs.impl, descriptorPath=intellij.platform.vcs.impl.xml, path=/Applications/Android Studio.app/Contents/lib, version=243.24978.46, package=null, isBundled=true), PluginDescriptor(name=IDEA CORE, id=com.intellij, moduleName=intellij.platform.vcs.log.impl, descriptorPath=intellij.platform.vcs.log.impl.xml, path=/Applications/Android Studio.app/Contents/lib, version=243.24978.46, package=null, isBundled=true), PluginDescriptor(name=IDEA CORE, id=com.intellij, moduleName=intellij.platform.vcs.dvcs.impl, descriptorPath=intellij.platform.vcs.dvcs.impl.xml, path=/Applications/Android Studio.app/Contents/lib, version=243.24978.46, package=null, isBundled=true), PluginDescriptor(name=IDEA CORE, id=com.intellij, moduleName=intellij.platform.collaborationTools, descriptorPath=intellij.platform.collaborationTools.xml, path=/Applications/Android Studio.app/Contents/lib, version=243.24978.46, package=null, isBundled=true), PluginDescriptor(name=Android, id=org.jetbrains.android, descriptorPath=plugin.xml, path=/Applications/Android Studio.app/Contents/plugins/android, version=243.24978.46.2431.13208083, package=com.android.tools.idea.gradle.dsl.kotlin, isBundled=true), )
        // use embedded guava in IDEA
        exclude group: 'com.google.guava', module: 'guava'
        // java.lang.LinkageError: loader constraint violation: when resolving method
        // 'org.slf4j.ILoggerFactory org.slf4j.impl.StaticLoggerBinder.getLoggerFactory()'
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }
    implementation project(':deploy_compat:interface')
    implementation project(':deploy_compat:v_chipmunk')
    implementation project(':deploy_compat:v_giraffe')
    implementation project(':deploy_compat:v_hedgehog')
    implementation project(':deploy_compat:v_iguana')
    implementation project(':deploy_compat:v_meerkat')
    implementation project(':deploy_compat:v_narwhal')
    implementation project(':deploy_compat:v_narwhal_feature')
    implementation project(':deploy_compat:v_otter')
    implementation project(':deploy_compat:v_panda')
    implementation project(':deploy_compat:v_quail')

    // backend
    implementation "com.squareup.okhttp3:okhttp:4.12.0"

    testImplementation fileTree(dir: '../main/libs', include: ['*.jar'])
    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:5.4.0"
    testImplementation "org.mockito:mockito-inline:5.2.0"
    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.23"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    testImplementation "org.json:json:20240303"

    // uncomment it when we need to debug apt
//    compileOnly 'com.alibaba:arouter-compiler:1.5.2'

    // uncomment it when we need to debug ksp 1.7.21
//    compileOnly "com.google.devtools.ksp:symbol-processing-api:1.7.21-1.0.8"
//    compileOnly "com.google.devtools.ksp:symbol-processing:1.7.21-1.0.8"
//    compileOnly 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'

    // uncomment it when we need to debug ksp 2.0.21
    // source code: https://github.com/google/ksp/archive/refs/tags/2.0.21-1.0.27.zip
//    compileOnly "com.google.devtools.ksp:symbol-processing-api:2.0.21-1.0.27"
//    compileOnly "com.google.devtools.ksp:symbol-processing:2.0.21-1.0.27"
//    compileOnly fileTree(include: ['jetified-core-ksp-jvm-2.4.0-2.0.21.jar'], dir: "${System.getProperty("user.home")}/.gradle/caches/8.9/transforms/1e293b78b8d2d971f356ac2d72f7f24a/transformed/")
}
